metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/Cadence_Task_Configuration__c.object-meta.xml
<CustomObject>
    <description>Information about the reports and tasks created by the report within the task dispatcher</description>
    <label>Cadence Task Configuration</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence Task Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>