metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the report will be processed when the task dispatcher is processed</description>
    <inlineHelpText>If checked, the report will be processed when the task dispatcher is processed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>