metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/Playbook__c.field-meta.xml
<CustomField>
    <fullName>Playbook__c</fullName>
    <description>Instructions to execute the task</description>
    <inlineHelpText>Instructions to execute the task</inlineHelpText>
    <label>Playbook</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>