metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>Report Id from the report that will be executed by the task dispatcher</description>
    <inlineHelpText>Report Id from the report that will be executed by the task dispatcher</inlineHelpText>
    <label>Report ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>