metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Report_Link__c</fullName>
    <description>Link to the report</description>
    <formula>HYPERLINK(
    LEFT($Api.Partner_Server_URL_260, FIND(&quot;.com&quot;, $Api.Partner_Server_URL_260) + 3) &amp; &quot;/&quot; &amp; Report_ID__c,
    &quot;Open Report&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the report</inlineHelpText>
    <label>Report Link</label>
    <type>Text</type>
</CustomField>