metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <description>SLA in days</description>
    <inlineHelpText>SLA in days</inlineHelpText>
    <label>SLA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>