metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/fields/Task_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Task_Dispatcher__c</fullName>
    <description>Task Dispatcher for which this mapping is part of</description>
    <inlineHelpText>Task Dispatcher for which this mapping is part of</inlineHelpText>
    <label>Task Dispatcher</label>
    <referenceTo>Task_Dispatcher__c</referenceTo>
    <relationshipLabel>Cadence Task Configurations</relationshipLabel>
    <relationshipName>Cadence_Task_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>