metadata/sf-prod/force-app/main/default/objects/Cadence_Task_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Dispatcher__c</columns>
    <columns>SLA__c</columns>
    <columns>Report_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Report_Link__c</columns>
    <columns>Playbook__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>